<resources>
    <string name="app_name">Epistemic App</string>
    <string name="hello">Olá</string>
    <string name="medicines">Medicamentos</string>
    <string name="medicines_description">(Esqueceu algum medicamento)</string>
    <string name="exercises">Exercícios</string>
    <string name="exercises_description">(Se fez alguma atividade física)</string>
    <string name="language">Idioma</string>
    <string name="language_description">Selecione o idioma do aplicativo.</string>
    <string name="language_pt_br" translatable="false">Português Brasil</string>
    <string name="language_en_us" translatable="false">English USA</string>
    <string name="notifications">Notificações</string>
    <string name="notifications_description">Selecione as notificações que serão exibidas para você como lembrete para inserções no diário.</string>
    <string name="notifications_option_1">4 vezes por dia</string>
    <string name="notifications_option_2">2 vezes ao dia</string>
    <string name="notifications_option_3">1 vez ao dia</string>
    <string name="notifications_option_4">Nenhuma notificação</string>
    <string name="sunday">Domingo</string>
    <string name="monday">Segunda-feira</string>
    <string name="tuesday">Terça-feira</string>
    <string name="wednesday">Quarta-feira</string>
    <string name="thursday">Quinta-feira</string>
    <string name="friday">Sexta-feira</string>
    <string name="satuday">Sábado</string>
    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="june">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Outubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>
    <string name="channel_reminder">Canal de Lembrete</string>
    <string name="channel_reminder_description">Canal para entradas de diário de lembrete</string>
    <string name="notification_reminder_text">Coloque suas inserções diárias</string>
    <string name="notification_reminder_tittle">Lembrete</string>
    <string name="schedules">"Horários: "</string>
    <string name="granted_permissions">Permissões de Notificações Permitidas.</string>
    <string name="not_granted_permissions">Permissões de Notificações Negadas.</string>
    <string name="send_link_desc">Ao clicar em \'ENVIAR\', um Link de recuperação de senha será enviado ao seu email.</string>
    <string name="send">ENVIAR</string>
    <string name="password">Senha</string>
    <string name="enter">ENTRAR</string>
    <string name="forgot_password_desc">Esqueceu sua senha? Clique Aqui</string>
    <string name="register_desc">Não tem uma conta? Cadastre-se</string>
    <string name="terms_of_use">Termos de uso</string>
    <string name="confirm_password">Confirmar senha</string>
    <string name="register">CADASTRAR</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="name">Nome</string>
    <string name="hello_name" translatable="false">Olá, Vitor</string>
    <string name="success_on_register">Sucesso ao cadastrar!</string>
    <string name="empty_name">Nome vazio!</string>
    <string name="invalid_email">Email Inválido!</string>
    <string name="invalid_password">Senha Inválida</string>
    <string name="password_not_match">As senhas não correspondem!</string>
    <string name="error_on_register">Erro ao se cadastrar!</string>
    <string name="block_account">Conta bloqueada! Número máximo de tentativas excedidas!</string>
    <string name="error_on_login">Error ao logar!</string>
    <string name="to_add">Adicionar</string>
    <string name="add_crisis">Adicionar uma crise</string>
    <string name="success_on_send_link">Successo! Email de recuperação enviado.</string>
    <string name="error_on_send_email">Erro ao mandar email!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="terms_of_use_desc">Você será redicionado para a página de termos de uso</string>
</resources>