<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_login"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingVertical="@dimen/gap_larger">

        <LinearLayout
            android:id="@+id/linear_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/gap_larger"
            android:background="@drawable/bg_card_login"
            android:orientation="vertical"
            android:paddingVertical="@dimen/gap_normal"
            app:layout_constraintBottom_toTopOf="@id/tv_terms_of_use"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitCenter" />

            <br.com.epistemic.app.commom.custom.NormalInputText
                android:id="@+id/input_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_normal"
                android:layout_marginTop="32dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="0dp"
                app:hint="@string/email"
                app:icon="@drawable/ic_person"
                app:strokeWidth="0dp" />

            <br.com.epistemic.app.commom.custom.PasswordInputText
                android:id="@+id/input_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_normal"
                android:layout_marginTop="@dimen/gap_normal"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="0dp"
                app:hint="@string/password"
                app:icon="@drawable/ic_lock"
                app:strokeWidth="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_submit"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginHorizontal="@dimen/gap_normal"
                android:layout_marginTop="@dimen/gap_normal"
                android:backgroundTint="@color/purple"
                android:paddingVertical="10dp"
                android:text="@string/enter"
                android:textColor="@color/white"
                app:cornerRadius="12dp" />

            <TextView
                android:id="@+id/tv_login_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_normal"
                android:layout_marginTop="@dimen/gap_small"
                android:text="@string/forgot_password_desc"
                android:textAlignment="center"
                android:textColor="@color/purple" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_marginVertical="@dimen/gap_normal"
                app:dividerColor="@color/light_pink" />

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/gap_normal"
                android:text="@string/register_desc"
                android:textAlignment="center"
                android:textColor="@color/purple" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_terms_of_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gap_normal"
            android:text="@string/terms_of_use"
            android:textAlignment="center"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear_layout_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>